src/test/deca/context/invalid/object/sameParam.deca
class X
{
  int a;
}
class A
{
  X a(int a, float a){}
}

class B extends A
{
  X a(int a, float a){}
}
